--- a/root/src/index.html
+++ b/root/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="{%= name %}App">
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>{%= name %}</title>
   <!-- inject:html -->
   <!-- any *.html files among your sources will go here as: <link rel="import" href="FILE"> -->
